sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/Mx_Onboarding_Link__c.object-meta.xml
<CustomObject>
    <description>LEM-15116: It is used to store Mx onboarding links.</description>
    <label>Mx Onboarding Link</label>
    <nameField>
        <displayFormat>MOL-{0000}</displayFormat>
        <label>Mx Onboarding Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mx Onboarding Links</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>