sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: It stores address verification status of the Mx Onboarding Link.</description>
    <label>Address Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
                <default>true</default>
                <label>Unverified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>