sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15116: It indicates business account.</description>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mx Onboarding Links</relationshipLabel>
    <relationshipName>Mx_Onboarding_Links</relationshipName>
    <type>Lookup</type>
</CustomField>