sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15116: It indicates contract.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Mx Onboarding Links</relationshipLabel>
    <relationshipName>Mx_Onboarding_Links</relationshipName>
    <type>Lookup</type>
</CustomField>