sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Expiration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It stores expiration date/time.</description>
    <label>Expiration Date/Time</label>
    <type>DateTime</type>
</CustomField>