sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Generated_By__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15116: It indicates Mx onboarding link generated by name.</description>
    <label>Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mx_Onboarding_Links</relationshipName>
    <type>Lookup</type>
</CustomField>