sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Mx_Email__c.field-meta.xml
<CustomField>
    <fullName>Mx_Email__c</fullName>
    <description>LEM-16403: It stores email of the Mx to collect Onboarding Inputs.</description>
    <inlineHelpText>This email will be used to automatically send the Onboarding Inputs link to the Mx to fill out and submit.</inlineHelpText>
    <label>Mx Email</label>
    <type>Email</type>
</CustomField>