sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Mx_Form_Language__c.field-meta.xml
<CustomField>
    <fullName>Mx_Form_Language__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-24213: It indicates the input language of Mx Form.</description>
    <label>Mx Form Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>