sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Mx_Onboarding_Link_Next_Update__c.field-meta.xml
<CustomField>
    <fullName>Mx_Onboarding_Link_Next_Update__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates the scheduled time for mx onboarding link record update.</description>
    <formula>CreatedDate + ((Value($CustomMetadata.Static_Configurations__mdt.Mx_Onboarding_Link_Update_Time_In_Mins.Configuration_Value__c)/60)/24)</formula>
    <label>Mx Onboarding Link Next Update</label>
    <type>DateTime</type>
</CustomField>