sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Mx_Onboarding_Link_Record_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Mx_Onboarding_Link_Record_Hyperlink__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It is used to store hyperlink to Mx Onboarding Link record.</description>
    <formula>HYPERLINK(
    $CustomMetadata.Static_Configurations__mdt.MxOnboardingLinkURLPrefix.Configuration_Value__c + Id +
    $CustomMetadata.Static_Configurations__mdt.FigmentCaseURLSuffix.Configuration_Value__c,
    &apos;here&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mx Onboarding Link Record Hyperlink</label>
    <type>Text</type>
</CustomField>