sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Onboarding_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Scenario__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It stores onboarding scenarios.</description>
    <label>Onboarding Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net-New</fullName>
                <label>Net-New Mx Onboarding</label>
            </value>
            <value>
                <fullName>NSE</fullName>
                <label>New Store Expansion</label>
            </value>
            <value>
                <fullName>Product Addition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>