sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/One_Time_Mx_Link__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Mx_Link__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It stores one time Mx link.</description>
    <label>One-Time Mx Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>