sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-23683: It is used to store the Opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Mx Onboarding Links</relationshipLabel>
    <relationshipName>Mx_Onboarding_Links</relationshipName>
    <type>Lookup</type>
</CustomField>