sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15328: It stores the data required for processing.</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>