sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Product_on_Contract__c.field-meta.xml
<CustomField>
    <fullName>Product_on_Contract__c</fullName>
    <label>Product on Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>