sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Record_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Creation_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It stores record creation status.</description>
    <label>Record Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>WO Creation Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>