sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Rep_Collecting_On_Mx_Behalf__c.field-meta.xml
<CustomField>
    <fullName>Rep_Collecting_On_Mx_Behalf__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It stores rep collecting on Mx behalf.</description>
    <label>Rep Collecting On Mx Behalf</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>