sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>LEM-18016  This field is to track the source of Mx Onboarding link creation.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OnA</fullName>
                <default>true</default>
                <label>OnA</label>
            </value>
            <value>
                <fullName>RESSMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>