sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Store_Count__c.field-meta.xml
<CustomField>
    <fullName>Store_Count__c</fullName>
    <label>Store Count</label>
    <summaryFilterItems>
        <field>Store_Detail__c.Is_Store_For_No_Rep_Scenario__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Store_Detail__c.Mx_Onboarding_Link__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>