sfdx-source/force-app/main/default/objects/Mx_Onboarding_Link__c/fields/Submitted_By_Mx_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Mx_Email__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: In stores email of the submitted by Mx.</description>
    <label>Submitted By Mx Email</label>
    <type>Email</type>
</CustomField>